Update test script with latest results

--- a/ml_models/Test classification.ipynb
+++ b/ml_models/Test classification.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "a1210ff8",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0e18d76c",
    "metadata": {},
    "outputs": [
@@ -69,10 +69,11 @@
       "Successfully loaded ImageNet labels.\n",
       "Loading original ImageNet MobileNetV2...\n",
       "Loading custom model from smartstop_mobilenet_v2_esp32cam.pth...\n",
-      "Loading custom model from smartstop_mobilenet_v2_esp32cam_smartstopold.pth...\n",
+      "Loading custom model from smartstop_mobilenet_v2_esp32cam_smartstopv1.pth...\n",
+      "Loading custom model from smartstop_mobilenet_v2_esp32cam_smartstopv2.pth...\n",
       "Loading custom model from smartstop_mobilenet_v2_esp32cam_smartstop.pth...\n",
       "\n",
-      "--- Ready! Loaded 4 models. ---\n",
+      "--- Ready! Loaded 5 models. ---\n",
       "Starting batch prediction on all images in: ./test_images/\n",
       "\n",
       "====== Predictions for ./test_images/image851.jpg ======\n",
@@ -85,11 +86,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (78.4%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 0_empty (36.1%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 0_empty (46.5%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 1_low (52.6%)\n",
       "\n",
       "====== Predictions for ./test_images/image852.jpg ======\n",
       "\n",
@@ -101,11 +105,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (88.7%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 1_low (43.9%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 0_empty (53.1%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 1_low (63.4%)\n",
       "\n",
       "====== Predictions for ./test_images/image853.jpg ======\n",
       "\n",
@@ -117,11 +124,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (88.1%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 1_low (47.8%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 1_low (42.4%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 2_medium (63.9%)\n",
       "\n",
       "====== Predictions for ./test_images/image854.jpg ======\n",
       "\n",
@@ -133,11 +143,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (88.5%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 1_low (55.4%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 0_empty (43.2%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 2_medium (46.5%)\n",
       "\n",
       "====== Predictions for ./test_images/image855.jpg ======\n",
       "\n",
@@ -149,11 +162,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (87.5%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 1_low (65.7%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 0_empty (56.9%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 1_low (77.5%)\n",
       "\n",
       "====== Predictions for ./test_images/image856.jpg ======\n",
       "\n",
@@ -165,11 +181,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (98.1%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 1_low (54.1%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 0_empty (67.9%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 0_empty (67.0%)\n",
       "\n",
       "====== Predictions for ./test_images/image857.jpg ======\n",
       "\n",
@@ -181,11 +200,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (97.3%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 0_empty (53.8%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 0_empty (84.9%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 0_empty (95.0%)\n",
       "\n",
       "====== Predictions for ./test_images/image858.jpg ======\n",
       "\n",
@@ -197,11 +219,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (54.1%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 0_empty (50.4%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 0_empty (50.1%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 0_empty (56.5%)\n",
       "\n",
       "====== Predictions for ./test_images/image859.jpg ======\n",
       "\n",
@@ -213,11 +238,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (95.7%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 1_low (58.2%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 0_empty (69.1%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 2_medium (58.3%)\n",
       "\n",
       "====== Predictions for ./test_images/image860.jpg ======\n",
       "\n",
@@ -229,11 +257,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (93.2%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 1_low (61.1%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 0_empty (79.9%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 1_low (58.2%)\n",
       "\n",
       "====== Predictions for ./test_images/image861.jpg ======\n",
       "\n",
@@ -245,11 +276,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (93.9%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 1_low (70.0%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 0_empty (46.5%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 2_medium (47.4%)\n",
       "\n",
       "====== Predictions for ./test_images/image862.jpg ======\n",
       "\n",
@@ -261,11 +295,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (76.5%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 1_low (59.9%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 0_empty (44.0%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 2_medium (92.4%)\n",
       "\n",
       "====== Predictions for ./test_images/image863.jpg ======\n",
       "\n",
@@ -277,11 +314,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (76.2%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 1_low (58.6%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 0_empty (46.4%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 2_medium (76.2%)\n",
       "\n",
       "====== Predictions for ./test_images/image864.jpg ======\n",
       "\n",
@@ -293,11 +333,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 3_high (61.6%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 1_low (40.0%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 0_empty (44.8%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 2_medium (37.1%)\n",
       "\n",
       "====== Predictions for ./test_images/image865.jpg ======\n",
       "\n",
@@ -309,11 +352,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (87.5%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 1_low (35.0%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 3_high (57.1%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 2_medium (62.8%)\n",
       "\n",
       "====== Predictions for ./test_images/image866.jpg ======\n",
       "\n",
@@ -325,11 +371,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (60.1%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 1_low (53.3%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 3_high (42.4%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 2_medium (49.7%)\n",
       "\n",
       "====== Predictions for ./test_images/image867.jpg ======\n",
       "\n",
@@ -341,11 +390,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 3_high (63.9%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 3_high (66.1%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 3_high (73.7%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 3_high (66.1%)\n",
       "\n",
       "====== Predictions for ./test_images/image868.jpg ======\n",
       "\n",
@@ -357,11 +409,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (69.9%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 3_high (47.0%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 3_high (56.4%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 3_high (74.9%)\n",
       "\n",
       "====== Predictions for ./test_images/image869.jpg ======\n",
       "\n",
@@ -373,11 +428,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 3_high (51.9%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 3_high (60.6%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 3_high (53.9%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 3_high (75.0%)\n",
       "\n",
       "====== Predictions for ./test_images/image870.jpg ======\n",
       "\n",
@@ -389,11 +447,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (73.3%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 3_high (47.6%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 0_empty (63.6%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 3_high (91.3%)\n",
       "\n",
       "====== Predictions for ./test_images/image871.jpg ======\n",
       "\n",
@@ -405,11 +466,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (84.3%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 3_high (47.1%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 0_empty (46.4%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 3_high (91.5%)\n",
       "\n",
       "====== Predictions for ./test_images/image872.jpg ======\n",
       "\n",
@@ -421,11 +485,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (48.6%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 1_low (41.9%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 3_high (44.1%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 3_high (95.0%)\n",
       "\n",
       "====== Predictions for ./test_images/image873.jpg ======\n",
       "\n",
@@ -437,11 +504,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (77.7%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 1_low (60.2%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
+      "[Trained using actual SmartStop data v2]\n",
       "  Result: 3_high (44.9%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 3_high (91.1%)\n",
       "\n",
       "====== Predictions for ./test_images/image874.jpg ======\n",
       "\n",
@@ -453,11 +523,14 @@
       "[First Attempt ESP32-CAM]\n",
       "  Result: 2_medium (76.3%)\n",
       "\n",
-      "[Trained using actual SmartStop data Old ]\n",
+      "[Trained using actual SmartStop data v1 ]\n",
       "  Result: 1_low (49.3%)\n",
       "\n",
-      "[Trained using actual SmartStop data]\n",
-      "  Result: 3_high (52.5%)\n"
+      "[Trained using actual SmartStop data v2]\n",
+      "  Result: 3_high (52.5%)\n",
+      "\n",
+      "[Trained using actual SmartStop data new]\n",
+      "  Result: 3_high (69.2%)\n"
      ]
     }
    ],
